basic metabolism calculator - validation done.

--- a/css/main.css
+++ b/css/main.css
@@ -515,10 +515,14 @@ section .photo {
   transform: rotate(45deg) translate(-8px, -8px); }
 
 /* line 428, scss/main.css */
-.visible {
-  display: none; }
+.visible label {
+  color: red; }
 
 /* line 431, scss/main.css */
+.visible input {
+  border: 2px solid red; }
+
+/* line 434, scss/main.css */
 .bgClick {
   display: none;
   width: 100vw;
@@ -532,7 +536,7 @@ section .photo {
   background-repeat: no-repeat;
   background-position: center top; }
 
-/* line 443, scss/main.css */
+/* line 446, scss/main.css */
 .bgClick .finalFormBg {
   right: 0;
   top: 85px;
@@ -541,12 +545,12 @@ section .photo {
   background: white; }
 
 @media (min-width: 450px) {
-  /* line 450, scss/main.css */
+  /* line 453, scss/main.css */
   .bgClick .finalFormBg {
     top: 150px;
     width: 600px; } }
 
-/* line 453, scss/main.css */
+/* line 456, scss/main.css */
 .bgClick .finalFormBg h2 {
   font-size: 25px;
   font-weight: 600;
@@ -555,27 +559,27 @@ section .photo {
   padding: 20px 0; }
 
 @media (min-width: 450px) {
-  /* line 460, scss/main.css */
+  /* line 463, scss/main.css */
   .bgClick .finalFormBg h2 {
     font-size: 25px; } }
 
-/* line 462, scss/main.css */
+/* line 465, scss/main.css */
 .bgClick .finalFormBg p {
   font-size: 20px;
   text-align: center;
   padding: 20px; }
 
-/* line 466, scss/main.css */
+/* line 469, scss/main.css */
 .bgClick .finalFormBg p span {
   font-size: 20px;
   font-weight: 600;
   color: #ff971f; }
 
-/* line 470, scss/main.css */
+/* line 473, scss/main.css */
 .bgClick .bmiScale {
   display: none; }
 
-/* line 472, scss/main.css */
+/* line 475, scss/main.css */
 .bgClick .bmiScale h2 {
   font-size: 25px;
   font-weight: 600;
@@ -584,29 +588,29 @@ section .photo {
   padding: 20px 0; }
 
 @media (min-width: 450px) {
-  /* line 479, scss/main.css */
+  /* line 482, scss/main.css */
   .bgClick .bmiScale h2 {
     font-size: 25px; } }
 
-/* line 481, scss/main.css */
+/* line 484, scss/main.css */
 .bgClick .bmiScale .list {
   padding-top: 10px;
   text-align: center;
   font-size: 15px;
   list-style: none; }
 
-/* line 486, scss/main.css */
+/* line 489, scss/main.css */
 .bgClick .bmiScale .list li {
   text-align: center;
   list-style: none;
   font-size: 13px; }
 
 @media (min-width: 450px) {
-  /* line 491, scss/main.css */
+  /* line 494, scss/main.css */
   .bgClick .bmiScale .list li {
     font-size: 15px; } }
 
-/* line 493, scss/main.css */
+/* line 496, scss/main.css */
 .bgClick .closeFormBtn {
   cursor: pointer;
   margin-left: 2%;
@@ -619,13 +623,13 @@ section .photo {
   margin-left: auto; }
 
 @media (min-width: 450px) {
-  /* line 504, scss/main.css */
+  /* line 507, scss/main.css */
   .bgClick .closeFormBtn {
     width: 265px;
     height: 50px;
     margin: 50px auto; } }
 
-/* line 508, scss/main.css */
+/* line 511, scss/main.css */
 .bgClick .closeFormBtn p {
   text-shadow: 1px 1px 3px #854900;
   font-size: 17px;
@@ -635,6 +639,6 @@ section .photo {
   letter-spacing: 1px; }
 
 @media (min-width: 450px) {
-  /* line 516, scss/main.css */
+  /* line 519, scss/main.css */
   .bgClick .closeFormBtn p {
     padding-top: calc(50% - 118px); } }
