--- a/scss/partials/_section1.scss
+++ b/scss/partials/_section1.scss
@@ -279,7 +279,12 @@ section {
 }
 
 .visible {
-    display: none;
+    label {
+        color: red;
+    }
+    input {
+        border: 2px solid red;
+    }
 }
 
 .bgClick {
