--- a/scss/partials/_section1.scss
+++ b/scss/partials/_section1.scss
@@ -100,6 +100,7 @@ section {
     border-radius: 2px;
     display: block;
     margin: auto;
+    box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.52);
     @media (min-width: 450px) {
         width: 350px;
         height: 550px;
